[project]
name = "blackjack-playground"
version = "0.1.0"
description = "A python project for trying out different blackjack strategies, in an attempt to find optimal net positive play, including action policies plus betting strategies"
authors = [
    {name = "andyherfer",email = "andyherfer@yahooo.com.mx"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
